# MuLi

./: .gitignore  LICENSE  README.md  config.json.example  config.json5  main.py  pyproject.toml
Live2D/: DialogueEncoder.py  StateEncoder.py
config_manage/: manager.py
core/: config.py
core/agents/: MuLi.py
core/prompts/: MuLi.txt  summary.txt
core/tools/: __init__.py  tool_executor.py
core/tools/mcp_tools/: __init__.py  mcp_tools.py
core/tools/py_tools/: __init__.py  base64.py  file_copy_container.py  get_weather.py  shell_for_ai.py  time.py  web_search.py
core/utils/: logger.py
llms/: AIModel.py  JsonModel.py
llms/providers/: deepseek.py  openai.py
response/: AIModel.py
